@@ -1,3 +1,7 @@
+r10 ====================================================================
+- исправлена ошибка в функции grad_values_to_array(), из-за которой
+  функция могла возвращать list вместо array
+
 r9 =====================================================================
 + добавлен класс RepeaterGenGradGen
 
